# git-library

./: .env  Cargo.toml  README.md
.cargo/: config
data/: sqlite.db  users.db
migrations/2023-02-06-020040_users/: up.sql
migrations/2023-02-06-024329_gitlist/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/users/: models.rs  schema.rs
src/modules/: git.rs
