[package]
name = "a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.3", features = ["sqlite"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
